fix: announcement bar not visible in safari when scrolling enabled

--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -31,8 +31,11 @@
   &--scrolling
     cursor: pointer
     padding: 0
-    overflow: hidden
-    min-height: fit-content
+    overflow: visible
+    display: flex
+    align-items: center
+    justify-content: center
+    // Safari fix: overflow visible on parent, hidden on wrapper
 
     // Pause scrolling on hover (desktop) and focus (keyboard) for accessibility
     @media (hover: hover)
@@ -47,10 +50,16 @@
       animation-play-state: paused
 
   &__scroll-wrapper
+    padding: 22px 0
     width: 100%
     overflow: hidden
+    display: flex
+    align-items: center
     // Isolate this container to prevent layout thrashing
     isolation: isolate
+
+    @media screen and (max-width: $break-small)
+      padding: 14px 0
 
   &__scroll-content
     display: inline-flex
